10) kernel: mips: smp-mt,smp-cmp: Enable all HW IRQs on secondary CPUs.<br>
11) kernel: mips: mt: proc: Add support for printing VPE and TC ids.<br>
12) kernel: mips: synchronize MIPS count one CPU at a time.<br>
13) kernel: mips: vpe.c: Fix null pointer dereference in print arguments.<br>
14) kernel: mips: remove gic_{enable,disable}_interrupt().<br>
15) kernel: mips: gic: remove gic_{pending,itrmask}_regs.<br>
16) kernel: mips: gic: remove platform irq_ack/irq_eoi callbacks.<br>
17) kernel: mips: gic: implement commit MIPS: IRQ: Fix disable_irq on CPU IRQs.<br>
18) kernel: mips: gic: fix gic_set_affinity() return value.<br>
19) kernel: pci: fix P2P bridge I/O port window sign extension.<br>
20) kernel: pci/portdrv: remove warning about invalid IRQ for hot-added PCIe ports.<br>
21) kernel: ipv4: remove output route check in ipv4_mtu.<br>
22) goahead: do not set FixedTxMode if MCS not limited/auto.<br>
23) goahead: hide some VHT options for parametrs fixed at 1T1R.<br>
24) goahead: split disable wifi modules, TxPower parametrs by band.<br>
25) goahead: move select band for ViF modes from advanced to basic.<br>
26) goahead: fix infinitive loop with high cpu usage in websGetInput.<br>
27) goahead: fix potentional security issue (extend path check in url req handler).<br>
28) goahead: fix info leak in socket reuse code.<br>
29) goahead: fix return web error code in some case.<br>
30) goahead: limit request ring length.<br>
31) init.d: add change wlan/wlan2 macs in factory.<br>
<br>
<br>
<b>2.4.x</b><br>
1) build_system: add test targets for usb devices.<br>
2) libcurl: up to 7.40.0 version.<br>
3) transmission: up to 2.84.<br>
4) apps: add fuse ntfs-3g (2014.2.15).<br>
5) dhcpv6: add read ifname for duid generatr from /tmp/wan_if_name exported from init.d.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>