@@ -2487,6 +2487,4 @@ module_exit(exit_exfat);
 
 MODULE_LICENSE("GPL");
 MODULE_DESCRIPTION("exFAT Filesystem Driver");
-#ifdef MODULE_ALIAS_FS
-MODULE_ALIAS_FS("exfat");
-#endif
+MODULE_ALIAS("extfat");
