@@ -548,6 +548,7 @@
 3) transmission: up to 2.84.<br>
 4) apps: add fuse ntfs-3g (2014.2.15).<br>
 5) dhcpv6: add read ifname for duid generatr from /tmp/wan_if_name exported from init.d.<br>
+6) kernel: exfat: add module alias for fix automount.<br>
 <br>
 <br>
 <b>TODO:</b><br>
